--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
         freeCompilerArgs += "-opt-in=kotlin.RequiresOptIn"
+        freeCompilerArgs += "-Xuse-experimental=kotlin.Experimental"
     }
 }
 
